--- a/package.json
+++ b/package.json
@@ -12,21 +12,29 @@
     "@ant-design/icons": "^5.1.4",
     "@types/node": "20.4.2",
     "@types/react": "18.2.14",
+    "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "18.2.7",
     "antd": "^5.7.0",
     "autoprefixer": "10.4.14",
+    "bootstrap": "^5.3.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "^13.4.10",
     "postcss": "8.4.25",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.4",
     "react-select-async-paginate": "^0.7.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.0",
+    "@types/react-scroll": "^1.8.7"
   }
 }
