--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "antd": "^5.7.0",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.3.0",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "^13.4.10",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.25",
+    "puppeteer": "^20.9.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
@@ -30,11 +33,12 @@
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.4",
     "react-select-async-paginate": "^0.7.3",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
+    "@types/puppeteer": "^7.0.4",
     "@types/react-modal": "^3.16.0",
-    "@types/react-scroll": "^1.8.7"
+    "@types/react-scroll": "^1.8.7",
+    "typescript": "^4.1.2"
   }
 }
