--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.14",
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-dom": "18.2.7",
+    "@types/react-notifications-component": "^3.1.1",
     "antd": "^5.7.0",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.3.0",
@@ -29,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
+    "react-notifications": "^1.7.4",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.4",
